--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,8 +2,8 @@
 
 #app {
   max-width: 100%;
-  margin: 0 auto;
-  padding: 2rem;
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
   font-weight: normal;
 }
 
